--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -11,6 +11,7 @@
 
 /* Component styles */
 @import url('components/badges.css');
+@import url('components/boosts.css');
 @import url('components/buttons.css');
 @import url('components/cards.css');
 @import url('components/carousel.css');
