--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/BoostSelector.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/BoostSelector.razor
@@ -9,6 +9,7 @@
                 <div class="boost-card-wrapper" role="listitem">
                     <BoostCard LeagueId="@LeagueId"
                                RoundId="@RoundId"
+                               BoostCode="@option.BoostCode"
                                ImageUrl="@option.ImageUrl"
                                SelectedImageUrl="@option.SelectedImageUrl"
                                DisabledImageUrl="@option.DisabledImageUrl"
