--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/boosts.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/boosts.css
@@ -28,6 +28,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
     }
 
 .boost-selector-grid.boost-count-2 .boost-card-wrapper {
